--- a/contato.html
+++ b/contato.html
@@ -20,35 +20,35 @@
 </head>
 
 <body>
-    <header class="header-position">
+    <header class="header-position" role="banner">
         <div class="navbar-content">
             <a href="./index.html">
                 <img src="./img/logo-header.png" alt="logotipo dindin" />
             </a>
-            <nav class="button-content" id="desktop-main">
-                <ul class="menu-nav">
-                    <li><a href="./cursos.html">Cursos</a></li>
-                    <li><a href="./blog.html">Blog</a></li>
-                    <li><a href="./contato.html">Contato</a></li>
+            <nav class="button-content" id="desktop-main" role="navigation" aria-level="main navigation">
+                <ul class="menu-nav" role="menu">
+                    <li><a href="./cursos.html" role="menuitem">Cursos</a></li>
+                    <li><a href="./blog.html" role="menuitem">Blog</a></li>
+                    <li><a href="./contato.html" role="menuitem">Contato</a></li>
                 </ul>
             </nav>
-            <nav id="mobile-main">
+            <nav id="mobile-main" role="navigation" aria-level="main navigation">
                 <div id="menu-toggle">
                     <input type="checkbox" />
                     <span></span>
                     <span></span>
                     <span></span>
-                    <ul id="mobile-main-content">
-                        <li><a href="./cursos.html">Cursos</a></li>
-                        <li><a href="./blog.html">Blog</a></li>
-                        <li><a href="./contato.html">Contato</a></li>
+                    <ul id="mobile-main-content" role="menu">
+                        <li><a href="./cursos.html" role="menuitem">Cursos</a></li>
+                        <li><a href="./blog.html" role="menuitem">Blog</a></li>
+                        <li><a href="./contato.html" role="menuitem">Contato</a></li>
                     </ul>
                 </div>
             </nav>
         </div>
     </header>
-    <main>
-       <section id="contato">
+    <main role="main">
+       <section>
             <div class="centralize-container">
                 <div class="container">
                     <div class="forms">
@@ -66,20 +66,24 @@
                 </div>
         </section>
     </main>
-    <footer>
+    <footer role="contentinfo">
         <div class="logo-footer">
             <img src="./img/logo-footer.png" alt="logotipo dindin" />
         </div>
-        <div class="menu-footer">
-            <ul class="menu-footer1">
-                <li><a href="./cursos.html">Cursos</a></li>
-                <li><a href="./blog.html">Blog</a></li>
-                <li><a href="./contato.html">Contato</a></li>
+        <nav class="menu-footer" role="navigation">
+            <ul class="menu-footer1" role="menu">
+                <li><a href="./cursos.html" role="menuitem">Cursos</a></li>
+                <li><a href="./blog.html" role="menuitem">Blog</a></li>
+                <li><a href="./contato.html" role="menuitem">Contato</a></li>
             </ul>
-        </div>
+        </nav>
         <div class="links-footer">
-            <div class="txt-footer"><a href="./contato.html">quero ser prof</a></div>
-            <div class="txt-footer"><a href="./contato.html">aqui tem outro link</a></div>
+            <div class="txt-footer">
+                <a href="./contato.html" aria-label="Quer ser nosso professor? - Entre em contato conosco">quero ser prof</a>
+            </div>
+            <div class="txt-footer">
+                <a href="./contato.html" aria-label="Aqui tem outro link - Entre em contato conosco">aqui tem outro link</a>
+            </div>
         </div>
     </footer>
 </body>
