--- a/cursos.html
+++ b/cursos.html
@@ -28,35 +28,40 @@
   </head>
 
   <body>
-    <header class="header-position">
+    <header class="header-position" role="banner">
       <div class="navbar-content">
         <a href="./index.html">
           <img src="./img/logo-header.png" alt="logotipo dindin" />
         </a>
-        <nav class="button-content" id="desktop-main">
-          <ul class="menu-nav">
-            <li><a href="./cursos.html">Cursos</a></li>
-            <li><a href="./blog.html">Blog</a></li>
-            <li><a href="./contato.html">Contato</a></li>
+        <nav
+          class="button-content"
+          id="desktop-main"
+          role="navigation"
+          aria-level="main navigation"
+        >
+          <ul class="menu-nav" role="menu">
+            <li><a href="./cursos.html" role="menuitem">Cursos</a></li>
+            <li><a href="./blog.html" role="menuitem">Blog</a></li>
+            <li><a href="./contato.html" role="menuitem">Contato</a></li>
           </ul>
         </nav>
-        <nav id="mobile-main">
+        <nav id="mobile-main" role="navigation" aria-level="main navigation">
           <div id="menu-toggle">
             <input type="checkbox" />
             <span></span>
             <span></span>
             <span></span>
-            <ul id="mobile-main-content">
-              <li><a href="./cursos.html">Cursos</a></li>
-              <li><a href="./blog.html">Blog</a></li>
-              <li><a href="./contato.html">Contato</a></li>
+            <ul id="mobile-main-content" role="menu">
+              <li><a href="./cursos.html" role="menuitem">Cursos</a></li>
+              <li><a href="./blog.html" role="menuitem">Blog</a></li>
+              <li><a href="./contato.html" role="menuitem">Contato</a></li>
             </ul>
           </div>
         </nav>
       </div>
     </header>
-    <main>
-      <section class="cursos" id="cursos">
+    <main role="main">
+      <section class="cursos">
         <div class="centralize-container">
           <div class="header-cursos">
             <h2 class="header-cursos-h2">Cursos</h2>
@@ -82,7 +87,11 @@
                 nesciunt.
               </p>
               <div class="cursos-button">
-                <a href="./curso.html">começar agora</a>
+                <a
+                  href="./curso.html"
+                  aria-label="Acesse nosso curso de Investimento para iniciantes"
+                  >começar agora</a
+                >
               </div>
             </div>
           </div>
@@ -107,7 +116,11 @@
                 nesciunt.
               </p>
               <div class="cursos-button">
-                <a href="./curso.html">começar agora</a>
+                <a
+                  href="./curso.html"
+                  aria-label="Acesse nosso curso Poupando e Rendendo"
+                  >começar agora</a
+                >
               </div>
             </div>
           </div>
@@ -132,30 +145,42 @@
                 nesciunt.
               </p>
               <div class="cursos-button">
-                <a href="./curso.html">começar agora</a>
+                <a
+                  href="./curso.html"
+                  aria-label="Acesse nosso curso Independência Financeira"
+                  >começar agora</a
+                >
               </div>
             </div>
           </div>
         </div>
       </section>
     </main>
-    <footer>
+    <footer role="contentinfo">
       <div class="logo-footer">
         <img src="./img/logo-footer.png" alt="logotipo dindin" />
       </div>
-      <div class="menu-footer">
-        <ul class="menu-footer1">
-          <li><a href="./cursos.html">Cursos</a></li>
-          <li><a href="./blog.html">Blog</a></li>
-          <li><a href="./contato.html">Contato</a></li>
+      <nav class="menu-footer" role="navigation">
+        <ul class="menu-footer1" role="menu">
+          <li><a href="./cursos.html" role="menuitem">Cursos</a></li>
+          <li><a href="./blog.html" role="menuitem">Blog</a></li>
+          <li><a href="./contato.html" role="menuitem">Contato</a></li>
         </ul>
-      </div>
+      </nav>
       <div class="links-footer">
         <div class="txt-footer">
-          <a href="./contato.html">quero ser prof</a>
+          <a
+            href="./contato.html"
+            aria-label="Quer ser nosso professor? - Entre em contato conosco"
+            >quero ser prof</a
+          >
         </div>
         <div class="txt-footer">
-          <a href="./contato.html">aqui tem outro link</a>
+          <a
+            href="./contato.html"
+            aria-label="Aqui tem outro link - Entre em contato conosco"
+            >aqui tem outro link</a
+          >
         </div>
       </div>
     </footer>
